--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body{
 /*-------------- 
 common style 
 ---------------*/
-.custom_margin{
+.custom_padding{
    padding: 80px 0px; 
 }
 
@@ -49,4 +49,29 @@ common style
     color: #E0E0E0;
     font-size: 16px;
     text-align: justify;
+}
+
+/*-------------------
+ features style 
+ --------------*/
+
+ .features h1{
+     text-align: center;
+     font-weight: 600;
+     font-size: 48px;
+     color: #000;
+ }
+ .features span{
+     text-align: center;
+     display: block;
+     color: #E76F51;
+     font-size: 14px;
+     font-weight: 600px;
+}
+.features hr{
+    width: 5%;
+    margin: auto;
+   
+    margin-top: 5px;
+    border: 2px solid rgb(218, 13, 13);
 }
